@@ -6,9 +6,13 @@ HYPERMAIL VERSION 3.0.0
 ============================
 
 2023-00-00 Jose Kahan
+	* src/{parse.c, string.c, proto.h}
+	extend mdecode_RFC2047() so that it replaces all non US-ASCII
+	characters with a '?' character before decoding headers
+
 	* src/parse.c
-	Fixes an error when a multipart/alternative message is missing 
-	its end boundary immediately followed by another message that 
+	Fixes an error when a multipart/alternative message is missing
+	its end boundary immediately followed by another message that
 	has a multipart/alternative.
 
 	* src/{hypermail.h, print.c}
